--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^3.5.1",
     "gatsby": "^2.20.12",
+    "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-sass": "^2.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
