--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.20.12",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-sass": "^2.2.1",
+    "gatsby-plugin-segment-js": "^3.1.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
