--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.8",
+    "@mdx-js/react": "^1.5.8",
     "classnames": "^2.2.6",
     "css-loader": "^3.5.1",
     "gatsby": "^2.20.12",
     "gatsby-plugin-manifest": "^2.3.3",
+    "gatsby-plugin-mdx": "^1.1.6",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-segment-js": "^3.1.0",
     "node-sass": "^4.13.1",
