--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-segment-js": "^3.1.0",
+    "gatsby-source-filesystem": "^2.2.2",
     "gatsby-source-local-git": "^0.2.2",
+    "gatsby-transformer-remark": "^2.7.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
