--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
+    "@raae/gatsby-remark-oembed": "^0.1.1",
     "classnames": "^2.2.6",
     "css-loader": "^3.5.1",
     "gatsby": "^2.20.12",
@@ -24,6 +25,7 @@
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-segment-js": "^3.1.0",
+    "gatsby-remark-responsive-iframe": "^2.3.1",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-source-local-git": "^0.2.2",
     "gatsby-transformer-remark": "^2.7.1",
