--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
+    "@n8tb1t/use-scroll-position": "^1.0.43",
     "@raae/gatsby-remark-oembed": "^0.1.1",
     "classnames": "^2.2.6",
     "css-loader": "^3.5.1",
