--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^3.5.1",
     "dangerously-set-html-content": "^1.0.3",
     "gatsby": "^2.20.12",
+    "gatsby-cli": "^2.11.22",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-mdx": "^1.1.6",
     "gatsby-plugin-react-helmet": "^3.2.1",
@@ -38,7 +39,8 @@
     "query-string": "^6.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-responsive": "^8.0.3"
   },
   "devDependencies": {
     "eslint-config-react-app": "^5.2.1",
