--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-responsive": "^8.0.3"
+    "react-responsive": "^8.0.3",
+    "sass": "^1.26.5"
   },
   "devDependencies": {
     "eslint-config-react-app": "^5.2.1",
