Make it easy to add Google fonts to the landing page

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-cli": "^2.11.22",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-mdx": "^1.1.6",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-segment-js": "^3.1.0",
