--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,7 @@
   "javascript.validate.enable": false,
   "editor.trimAutoWhitespace": true,
   "files.trimTrailingWhitespace": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact"
-  ],
+  "eslint.validate": ["javascript", "javascriptreact"],
   "ruby.lint": {
     "rubocop": true
   },
@@ -13,9 +10,12 @@
   "editor.formatOnSave": false,
   // Enable per-language
   "[javascript]": {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    }
   },
   "[scss]": {
     "editor.formatOnSave": true
-  },
+  }
 }
