--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-transformer-remark": "^2.7.1",
     "humps": "^2.0.1",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "lodash.isempty": "^4.4.0",
     "lodash.isobject": "^3.0.2",
     "nanobus": "^4.4.0",
