--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-instagram-embed": "^1.5.0",
     "react-responsive": "^8.0.3",
     "sass": "^1.26.5",
     "slugify": "^1.4.0"
